@@ -1,3 +1,9 @@
+2008-03-28  Nick Clifton  <nickc@redhat.com>
+
+	PR target/31110
+	* config/mn10300/mn10300.c (mn10300_secondary_reload_class):
+        Return GENERAL_REGS for stack adjustment reloads.
+
 2008-03-27  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
